--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
   
     <body>
-      <h1>ryan</h1>
-      <h2><a href='https://github.com/Rdoolz51'>Github</a></h2>
+      <h1>Jill</h1>
+      <h2><a href='https://github.com/Jdav204'>Github</a></h2>
     </body>
     </html>
     
